Attempted to fix spacing on table and day boxes.

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ h1 {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 .row {
@@ -109,7 +109,7 @@ select {
   margin-right: 1rem;
 }
 
-.space-evenly{
+.space-evenly {
   justify-content: space-evenly;
 }
 
@@ -121,12 +121,32 @@ tr:nth-child(odd) {
   background-color: rgb(233 230 230);
 }
 
-th{
-  background-color:#cccccc;
+th {
+  background-color: #ccc;
+  width: 100%;
 }
 
-.column-day{
+.column-day {
   border: 1px solid black;
   padding: 1rem;
   font-size: 1rem;
+}
+
+.time-table {
+  width: 25%;
+  padding-left: 5rem;
+}
+
+.description-table {
+  width: 75%;
+  padding-right: 5rem;
+}
+
+td {
+  width: 100%;
+  background-color: red;
+}
+
+table {
+  margin: 0;
 }
